--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <div class="main__content">
 
         <div class="main_content__login">
-            <p>Please Login with your Google Account or with your Mozilla Persona account to be able to post your item in the catalog...</p>
+            <p>Please Login with your Google Account to be able to post your item in the catalog...</p>
             <div class="main_content__signing_button">
                 <div class="google_signing_button">
                     <div id="signInButton">
